--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ header a i{
     padding: 5px;
 }
 
+/* Main */
 section {
     display: flex;
     flex-direction: column;
@@ -101,11 +102,30 @@ aside {
     flex-direction: column;
     padding: 15px;
 }
+.colorTexto{
+    color: rgb(255, 255, 255 );
+}
+input, select{
+    margin: 10px 0;
+}
+::placeholder{
+    color: white;
+    }
 aside h3{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px;
+}
+.contenedorSelectorColor{
+    display: flex;
+}
+.selectorColor{
+    width: 50%;
+    padding: 10px;
+}
+.colorFondo{
+    background-color: rgb(57, 62, 73);
 }
 form h4{
     margin: 10px auto;
