--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ aside button{
     color: var(--color-texto); 
 }
 
+/* footer */
 footer{
     display: flex;
     width: 20%;
@@ -162,6 +163,7 @@ footer{
     font-size: 18px;
 }
 
+/* responsive */
 @media screen and (max-width: 1300px){
     header{
         width: 100%;
